--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "pg": "^8.16.0"
   },
   "name": "carpeta-bakend",
   "version": "1.0.0",
